--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,76 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: In the Storm</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: A Call for Help</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: Jadbury Wilson</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: A Tale of the West</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Con Riley Under Fire</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: A Message from Montana</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: In the Windy City</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Second Stranger</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Escape</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: On Guard</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Fenton Hardy’s Story</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Cave</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: In the Depths of the Earth</a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Attacked by the Outlaws</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Trap</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Information</a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The Outlaw’s Notebook</a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: The Blizzard</a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: The Lone Tree</a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Down the Shaft</a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: Underground</a>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Black Pepper</a>
+				</li>
+				<li>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: The Capture</a>
+				</li>
+				<li>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: Bart Dawson Explains</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,7 +97,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">Hunting for Hidden Gold</a>
 				</li>
 			</ol>
 		</nav>
