Fixes from clean, typogrify, and lint

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -47,7 +47,7 @@
 					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Fenton Hardy’s Story</a>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Cave-In</a>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Cave-in</a>
 				</li>
 				<li>
 					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: In the Depths of the Earth</a>
